# cent_modeling

./: .gitignore  AGENTS.md  model_defs.py  pyproject.toml
.openclaw/: workspace-state.json
model/: __init__.py  agents.py  metrics.py  ranking.py  staking.py  weight_functions.py
research/curation-market-model/: formal_model_v1.aux  formal_model_v1.html  formal_model_v1.md  formal_model_v1.out  formal_model_v1.tex  formal_model_v1.toc  visualize_model.py
simulations/: analysis.py  run_scenario.py  scenarios.py
tests/: test_metrics.py  test_ranking.py  test_staking.py
