[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cent_modeling"
version = "0.2.0"
description = "Formal model of community curation pipelines (generalised Cent/Yours Network)"
authors = [{ name = "Corey Petty" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "simulations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
